--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "devtinder",
+  "name": "devtinder-backend",
   "version": "1.0.0",
   "description": "test product",
   "main": "app.js",
